--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                      <div class="profile">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQc9M4p_hxSco854ZFJL26WSLs2VkNHTqdsUQ&usqp=CAU">
                         <div class="tittle">
-                        <h4>jessica</h4>
-                        <p>2hrs</p>
+                        <h4>yonka</h4>
+                        <p>20hrs</p>
                         </div>
                </div>
             </div>
@@ -31,7 +31,7 @@
                      <div class="profile">
                          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQc9M4p_hxSco854ZFJL26WSLs2VkNHTqdsUQ&usqp=CAU" alt="">      
                         <div class="tittle">
-                            <h4>jessica</h4>
+                            <h4>ahmed</h4>
                             <p>2hrs</p>
                             </div>
                    </div>
